apps/base/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: sabnzbd
  labels:
    app.kubernetes.io/name: sabnzbd
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: sabnzbd
