apps/base/sabnzbd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`sabnzbd.cruznet.io`)
    kind: Rule
    services:
    - name: sabnzbd
      kind: Service
      port: 8080
  tls:
    secretName: sabnzbd-cert
